--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ protobuf==3.16.0
 pycparser==2.20
 pydgraph==21.3.0
 python-dateutil==2.8.1
+python-slugify
 pytz==2021.1
 six==1.16.0
 Werkzeug==1.0.1
