--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-Babel==2.9.1
-blinker==1.4
-cffi==1.14.5
-click==7.1.2
+Babel
+blinker
+cffi
+click
 colorama
-dnspython==2.1.0
-email-validator==1.1.2
-Flask==1.1.2
-Flask-Babel==2.0.0
-Flask-Email==1.4.4
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-Table==0.5.0
-Flask-WTF==0.14.3
-grpcio==1.37.1
-idna==3.1
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Pillow==8.2.0
-protobuf==3.16.0
-pycparser==2.20
-pydgraph==21.3.0
-python-dateutil==2.8.1
+dnspython
+email-validator
+Flask
+Flask-Babel
+Flask-Email
+Flask-Login
+Flask-Mail
+Flask-Table
+Flask-WTF
+grpcio
+idna
+itsdangerous
+Jinja2
+MarkupSafe
+Pillow
+protobuf
+pycparser
+pydgraph
+python-dateutil
 python-slugify
-pytz==2021.1
-six==1.16.0
-Werkzeug==1.0.1
-WTForms==2.3.3
+pytz
+six0
+Werkzeug
+WTForms
 feedparser
 validators
 instaloader
